--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "gatsby-starter-multiverse",
+  "name": "irinakopelevich",
   "version": "0.0.1",
-  "description": "Gatsby.js V2 starter template based on Multiverse by HTML5 UP",
+  "description": "Art portfolio for Irina Kopelevich",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/anubhavsrivastava/gatsby-starter-multiverse.git"
-  },
-  "author": {
-    "name": "Anubhav Srivastava",
-    "email": "anubhav.srivastava00@gmail.com"
   },
   "dependencies": {
     "gatsby": "^2.20.2",
@@ -38,11 +34,6 @@
     "prettier": "^1.17.0",
     "rimraf": "^3.0.2"
   },
-  "keywords": [
-    "gatsby",
-    "gatsby-starter",
-    "gatsby-starter-multiverse"
-  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/anubhavsrivastava/gatsby-starter-multiverse/issues"
