--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "dependencies": {
     "gatsby": "^2.20.2",
+    "gatsby-plugin-google-analytics": "^2.3.0",
     "gatsby-plugin-manifest": "^2.3.1",
     "gatsby-plugin-offline": "^3.1.0",
     "gatsby-plugin-react-helmet": "^3.2.0",
     "gatsby-plugin-sass": "^2.2.0",
+    "gatsby-source-filesystem": "^2.3.0",
+    "gatsby-transformer-csv": "^2.3.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
