--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "irinakopelevich",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Art portfolio for Irina Kopelevich",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/anubhavsrivastava/gatsby-starter-multiverse.git"
-  },
   "dependencies": {
+    "@stripe/stripe-js": "^1.8.0",
     "gatsby": "^2.20.2",
     "gatsby-plugin-google-analytics": "^2.3.0",
     "gatsby-plugin-manifest": "^2.3.1",
@@ -32,14 +29,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1",
     "prettier": "^1.17.0",
     "rimraf": "^3.0.2",
     "webpack": "^4.43.0"
   },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/anubhavsrivastava/gatsby-starter-multiverse/issues"
-  },
-  "homepage": "https://github.com/anubhavsrivastava/gatsby-starter-multiverse#readme"
+  "license": "MIT"
 }
