--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "prettier": "^1.17.0",
     "rimraf": "^3.0.2",
+    "stripe": "^8.102.0",
     "webpack": "^4.43.0"
   },
   "license": "MIT"
