--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1",
+    "react-hook-form": "^6.8.6",
     "react-images": "^0.5.19",
     "react-scrollspy": "^3.4.2",
     "smoothscroll-polyfill": "^0.4.4"
