--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Art portfolio for Irina Kopelevich",
   "dependencies": {
     "@stripe/stripe-js": "^1.8.0",
+    "axios": "^0.20.0",
     "gatsby": "^2.20.2",
     "gatsby-plugin-google-analytics": "^2.3.0",
     "gatsby-plugin-manifest": "^2.3.1",
